--- a/custom-web-shop/public/index.html
+++ b/custom-web-shop/public/index.html
@@ -15,16 +15,5 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
-  <script>
-    {
-      `
-    (function() {
-      var info = console.info
-      console.info = function (message) {
-        if (!/Download the React DevTools/.test(message)) info.apply(console, arguments) 
-      }
-    })()
-  `;
-    }
-  </script>
+  <script></script>
 </html>
